 - Redid "New Lands", "Winding Labyrinth".
 - Updated "Inevitable Confrontation".

Item/Equipment Balancing:
 - Heavily nerfed the recovery of the Potion, Elixir, and Ether.
  ~ Potion's HP recovery was reduced from 90 to 60, and Elixir's MP recovery was reduced from 36 to 24.
  ~ Since Ether heals ~20% more HP/MP than its Potion/Elixir counterpart, it has been nerfed accordingly.
 - Nerfed The Warden's Trade-off from [-10% MDR, +10% PDR] to [-5% MDR, +20% PDR].
 - Nerfed Giant Goblin's Rage's ATK increase from +20% to +10%.
 - Nerfed the Steel Axe's stun chance by 5% (was originally 10%).
 - Increased price of Metal Wristbraces ★ from 180B to 300B.
 - Gave Bloodlust +2% PLS.
 - Nerfed CRI of Red Mask from +2% to +1%.
 - Reworked Blood-Red Headband to grant +0.5% PLS and +3 AGI rather than +4% MHP and +3% CRI. Its price has increased from 80B to 120B.
 - Ethers no longer require Bits to craft. Their price has been adjusted accordingly.
 - Buffed the Knight's Greaves' DEF by 1 and AGI by 2, and also gave them +0.5% EVA and +0.5% CRI to be able to compete with the Leather Boots.

Skill Balancing:
 - Using BP with Revival now increases success rate instead of the amount of HP recovered on a successful revive.
 - Wand Impulse and Backstab now only heavily decrease MAT/ATK (respectively) for 2 turns instead of 3.
 - Channel Divinity I and Cure II's learn levels have been swapped to now be learned at levels 8 and 11, respectively.
 - Buffed Double Slash's damage by 25% and nerfed Focused Slash's damage by 16.6%.
  ~ These changes make Double Slash a relevant skill again, as it only hitting once will still do as much damage as Focused Slash. Focused Slash's CRI boost and lower MP cost make the choice between the skills dependant on playstyle.
 - Nerfed Purify's MP cost to 15 MP (was originally 8 MP).
 - Nerfed Curify MP cost to 30 MP (was originally 18 MP).
 - Nerfed Mana Refund's MP cost to 50 MP (was originally 15 MP).