@@ -434,7 +434,7 @@
     ],
     "gold": 10,
     "name": "Giant Rat",
-    "note": "<Sideview Battler: GiantRat>\n<Scale Sprite: 200%>\n<Steal Item 21: 100%>\n<Steal Item 22: 75%>\n<Attack Animation: 16>\n\n<Enemy Drops>\nRat Fur: 50%\nRation (Rat Jerky): 25%\nTough Pelt: 10%\nRat Claw: 5%\nMetal Wristbraces: 2.5%\n</Enemy Drops>",
+    "note": "<Sideview Battler: GiantRat>\n<Scale Sprite: 200%>\n<Steal Item 21: 100%>\n<Steal Item 22: 75%>\n<Attack Animation: 16>\n\n<Enemy Drops>\nRat Fur: 50%\nRation: 25%\nTough Pelt: 10%\nRat Claw: 5%\nMetal Wristbraces: 2.5%\n</Enemy Drops>",
     "params": [
       100,
       12,
@@ -3281,7 +3281,7 @@
     ],
     "gold": 500,
     "name": "Albino Rat",
-    "note": "<Sideview Battler: NoMatchingSprite/Albino Rat>\n<Attack Animation: 16>\n\n<Enemy Drops>\nRare Enemy Certificate: 100%\nAlbino Rat Fur: 100%\nMetallic Rat Pelt: 50%\nTough Pelt: 100%\nRat Claw: 100%\nMetal Wristbraces: 100%\nRat Fur: 100%\nRat Fur: 100%\nRat Fur: 100%\nRat Fur: 100%\nRat Fur: 100%\nRat Fur: 100%\nRat Fur: 100%\nRat Fur: 100%\nRat Fur: 100%\nRat Fur: 100%\nRat Fur: 100%\nRat Fur: 100%\nRat Fur: 100%\nRat Fur: 100%\nRat Fur: 100%\nRat Fur: 100%\nRat Fur: 100%\nRat Fur: 100%\nRat Fur: 100%\nRat Fur: 100%\nRation (Rat Jerky): 100%\nRation (Rat Jerky): 100%\nRation (Rat Jerky): 100%\nRation (Rat Jerky): 100%\nRation (Rat Jerky): 100%\nRation (Rat Jerky): 100%\nRation (Rat Jerky): 100%\nRation (Rat Jerky): 100%\nRation (Rat Jerky): 100%\nRation (Rat Jerky): 100%\n</Enemy Drops>",
+    "note": "<Sideview Battler: NoMatchingSprite/Albino Rat>\n<Attack Animation: 16>\n\n<Enemy Drops>\nRare Enemy Certificate: 100%\nAlbino Rat Fur: 100%\nMetallic Rat Pelt: 50%\nTough Pelt: 100%\nRat Claw: 100%\nMetal Wristbraces: 100%\nRat Fur: 100%\nRat Fur: 100%\nRat Fur: 100%\nRat Fur: 100%\nRat Fur: 100%\nRat Fur: 100%\nRat Fur: 100%\nRat Fur: 100%\nRat Fur: 100%\nRat Fur: 100%\nRat Fur: 100%\nRat Fur: 100%\nRat Fur: 100%\nRat Fur: 100%\nRat Fur: 100%\nRat Fur: 100%\nRat Fur: 100%\nRat Fur: 100%\nRat Fur: 100%\nRat Fur: 100%\nRation: 100%\nRation: 100%\nRation: 100%\nRation: 100%\nRation: 100%\nRation: 100%\nRation: 100%\nRation: 100%\nRation: 100%\nRation: 100%\n</Enemy Drops>",
     "params": [
       2500,
       50,
@@ -7715,7 +7715,7 @@
     ],
     "gold": 100,
     "name": "Feral Rat",
-    "note": "<Sideview Battler: NoMatchingSprite/Feral Rat>\n<Attack Animation: 16>\n\n<AI Priority>\nState === Magical Barrier: Shield Break, Highest HP%\n</AI Priority>\n\n<Enemy Drops>\nRat Fur: 75%\nRat Fur: 75%\nRation (Rat Jerky): 50%\nTough Pelt: 10%\nResiliant Pelt: 5%\nRat Claw: 5%\nMetal Wristbraces ★★: 2.5%\n</Enemy Drops>",
+    "note": "<Sideview Battler: NoMatchingSprite/Feral Rat>\n<Attack Animation: 16>\n\n<AI Priority>\nState === Magical Barrier: Shield Break, Highest HP%\n</AI Priority>\n\n<Enemy Drops>\nRat Fur: 75%\nRat Fur: 75%\nFulfilling Ration: 50%\nTough Pelt: 10%\nResiliant Pelt: 5%\nRat Claw: 5%\nMetal Wristbraces ★★: 2.5%\n</Enemy Drops>",
     "params": [
       3000,
       0,
