@@ -352,6 +352,10 @@ Item/Equipment Balancing:
  - Heavily nerfed the recovery of the Potion, Elixir, and Ether.
   ~ Potion's HP recovery was reduced from 90 to 60, and Elixir's MP recovery was reduced from 36 to 24.
   ~ Since Ether heals ~20% more HP/MP than its Potion/Elixir counterpart, it has been nerfed accordingly.
+ - Rebalanced the level of Well Fed applied by several food items. This is in order to make higher levels of the buff more rewarding and encourages cooking.
+  ~ Ration: Reduced from Well Fed to Somewhat Well Fed.
+  ~ Fulfilling Ration, Loaf of Bread: Reduced from Very Well Fed to Well Fed.
+  ~ Fruitcake: Increased from Very Well Fed to Exquisitely Well Fed.
  - Nerfed The Warden's Trade-off from [-10% MDR, +10% PDR] to [-5% MDR, +20% PDR].
  - Nerfed Giant Goblin's Rage's ATK increase from +20% to +10%.
  - Nerfed the Steel Axe's stun chance by 5% (was originally 10%).
@@ -396,7 +400,8 @@ Miscellaneous Balancing:
  - Nerfed the Rogue class's base HIT, EVA, and CRI by 1% each.
  - Nerfed Bat's ATK from 17 to 15.
  - Greatly increased Bit drops from all Blazing Sands enemies to account for high shop prices in Telluria Castle Town.
- - All levels of Well Fed increase ATK and MAT by +2%, +4%, and +6% at their respective levels.
+ - Replaced the Ration (Rat Jerky) in the Giant Rat's drop pool with a regular Ration, effectively removing the former from the game.
+ - All levels of Well Fed increase ATK and MAT by +2%, +4%, +6%, and +8% at their respective levels.
  - Increased Player 1's base MHP at levels 1 and 2 from [40, 48] to [48, 54], making Green Slime Cavern even easier for new players and reducing the chance of dying to the Mini Green Slime.
  - Many other small changes have been made to equipment/item stats, prices, and crafting recipes, as well as enemy stats/drops.
 
